public/style/main.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;600&family=Inconsolata:ital,wght@0,400;0,600;1,400;1,600&display=swap');

@font-face {
  font-family: Monogram;
  src: url(../fonts/bd-renaissance/BDRENAIS.TTF);
}

/* resets/normalizations */
html,
body {
  margin: 0;
  padding: 0;
  max-height: 100vh;
  scroll-behavior: smooth;
  font-family: var(--font-body);
  background-color: var(--color-base);
  color: var(--color-on-base);
}

h1,
h2,
h3,
h4,
h5,
h6,
strong,
b {
  font-weight: 400;
}

h1 {
  font-size: xx-large;
}

h1,
h2,
h3 {
  font-family: var(--font-display);
}

/* * {
  font-size: 1em;
} */

body {
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;
}

pre {
  /* font-family: Lato; */
  font-size: 1.1em;
}

p code {
  font-size: 1.1em;
  color: var(--color-brand);
}

summary {
  cursor: pointer;
}

a {
  color: inherit;
  text-decoration: inherit; /* no underline */
}

/* base styles */

:root {
  --shade-brand: 228, 77, 144;
  --color-brand: rgb(var(--shade-brand));
  --color-brand-muted: rgba(var(--shade-brand), 0.5);
  --color-on-brand: #ffffff;

  --color-base: #ffffff;
  --color-on-base: #2d2d2d;

  --font-display: 'Cinzel Decorative', serif;
  --font-body: 'Inconsolata', sans-serif;
  --font-monogram: 'Monogram';

  --separator-width: 2px;
  --separator-border: var(--separator-width) solid var(--color-on-base);

  --column-count: 1;
  --block-gap: 16px;
}

@media (prefers-color-scheme: dark) {
  :root {
    --color-base: #2d2d2d;
    --color-on-base: #ffffff;
  }
}

img {
  display: block;
  object-fit: cover;
  object-position: center;
  max-width: 100%;
  margin-left: auto;
  margin-right: auto;
  width: auto;
  height: auto;
}

.link,
.rendered a {
  text-decoration: underline;
  text-decoration: dotted underline var(--color-on-base);
  transition: all 300ms;
}

.link:hover,
.link:focus,
a:hover .link,
a.link:hover,
.rendered a:hover,
a:focus .link,
a.link:focus,
.rendered a:focus,
.kbar__result--active .link {
  color: var(--color-brand);
  text-decoration-color: var(--color-brand);
}

@media (min-width: 500px) {
  :root {
    --column-count: 2;
  }
}

@media (min-width: 750px) {
  :root {
    --column-count: 2;
  }
}

@media (min-width: 1000px) {
  :root {
    --column-count: 3;
  }
}

@media (min-width: 1250px) {
  :root {
    --column-count: 4;
  }
}

@media (min-width: 1250px) {
  :root {
    --column-count: 5;
  }
}

@media (min-width: 1500px) {
  :root {
    --column-count: 6;
  }
}

@media (min-width: 1750px) {
  :root {
    --column-count: 7;
  }
}

@media (min-width: 2000px) {
  :root {
    --column-count: 8;
  }
}

/* markdown */
pre.astro-code {
  padding: 16px;
  filter: grayscale();
  border: var(--separator-border);
  border-width: var(--separator-width);
}

code {
  counter-reset: step;
  counter-increment: step 0;
}

code .line::before {
  font-family: var(--font-body);
  content: counter(step);
  counter-increment: step;
  width: 1rem;
  margin-right: 1.5rem;
  display: inline-block;
  text-align: right;
}

blockquote {
  border-left: solid var(--separator-width) var(--color-brand);
  padding-left: var(--block-gap);
  margin-left: 0;
}

article {
  padding-bottom: 48px;
}

@media (max-width: 1000px) {
  article {
    border-bottom: var(--separator-border);
  }
}

/* search bar */

button {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  outline: inherit;

  transition: all 300ms;
  border: solid 2px transparent;
  color: var(--color-on-brand);
  background-color: var(--color-brand);
  padding: 0.25rem 0.5rem;
}

button:hover,
button:focus {
  border-color: var(--color-on-base);
}

.kbar__wrapper {
  display: flex;
  flex-direction: column;
  background-color: var(--color-base);
  width: 720px;
  max-width: 80vw;
  border: var(--separator-border);
  border-width: var(--separator-width);

  /* glass effect */
  opacity: 0.9;
}

.kbar__positioner {
  /* glass effect */
  backdrop-filter: blur(2px);
}

.kbar__search {
  font-size: 36px;
  font-family: var(--font-display);
  color: var(--color-on-base);
  background-color: var(--color-base);
  padding: 16px 20px;
  border-color: transparent;
  border-width: 0px;
  border-bottom-width: 2px;
  border-style: solid;
  outline: none;
}

.kbar__section {
  padding: 12px 16px;
}

.kbar__result {
  border: none;
  padding: 12px 20px;
}

.kbar__result__title {
  margin: 0;
}

.kbar__result__subtitle {
  margin: 0;
  margin-top: 4px;
}

/* katex */
.katex-display {
  max-width: 100%;
  overflow-x: auto;
  overflow-y: hidden;
}

/* Tweakpane */

:root {
  --tp-base-background-color: hsla(230, 5%, 90%, 1);
  --tp-base-shadow-color: hsla(0, 0%, 0%, 0.1);
  --tp-button-background-color: hsla(230, 7%, 75%, 1);
  --tp-button-background-color-active: hsla(230, 7%, 60%, 1);
  --tp-button-background-color-focus: hsla(230, 7%, 65%, 1);
  --tp-button-background-color-hover: hsla(230, 7%, 70%, 1);
  --tp-button-foreground-color: hsla(230, 10%, 30%, 1);
  --tp-container-background-color: hsla(230, 15%, 30%, 0.2);
  --tp-container-background-color-active: hsla(230, 15%, 30%, 0.32);
  --tp-container-background-color-focus: hsla(230, 15%, 30%, 0.28);
  --tp-container-background-color-hover: hsla(230, 15%, 30%, 0.24);
  --tp-container-foreground-color: hsla(230, 10%, 30%, 1);
  --tp-groove-foreground-color: hsla(230, 15%, 30%, 0.1);
  --tp-input-background-color: hsla(230, 15%, 30%, 0.1);
  --tp-input-background-color-active: hsla(230, 15%, 30%, 0.22);
  --tp-input-background-color-focus: hsla(230, 15%, 30%, 0.18);
  --tp-input-background-color-hover: hsla(230, 15%, 30%, 0.14);
  --tp-input-foreground-color: hsla(230, 10%, 30%, 1);
  --tp-label-foreground-color: hsla(230, 10%, 30%, 0.7);
  --tp-monitor-background-color: hsla(230, 15%, 30%, 0.1);
  --tp-monitor-foreground-color: hsla(230, 10%, 30%, 0.5);
}

@media (prefers-color-scheme: dark) {
  :root {
    --tp-base-background-color: hsla(0, 0%, 0%, 0.24);
    --tp-base-shadow-color: hsla(0, 0%, 0%, 0.2);
    --tp-button-background-color: hsla(0, 0%, 70%, 1);
    --tp-button-background-color-active: hsla(0, 0%, 85%, 1);
    --tp-button-background-color-focus: hsla(0, 0%, 80%, 1);
    --tp-button-background-color-hover: hsla(0, 0%, 75%, 1);
    --tp-button-foreground-color: hsla(0, 0%, 0%, 1);
    --tp-container-background-color: hsla(0, 0%, 10%, 1);
    --tp-container-background-color-active: hsla(0, 0%, 25%, 1);
    --tp-container-background-color-focus: hsla(0, 0%, 20%, 1);
    --tp-container-background-color-hover: hsla(0, 0%, 15%, 1);
    --tp-container-foreground-color: hsla(0, 0%, 50%, 1);
    --tp-groove-foreground-color: hsla(0, 0%, 10%, 1);
    --tp-input-background-color: hsla(0, 0%, 10%, 1);
    --tp-input-background-color-active: hsla(0, 0%, 25%, 1);
    --tp-input-background-color-focus: hsla(0, 0%, 20%, 1);
    --tp-input-background-color-hover: hsla(0, 0%, 15%, 1);
    --tp-input-foreground-color: hsla(0, 0%, 70%, 1);
    --tp-label-foreground-color: hsla(0, 0%, 50%, 1);
    --tp-monitor-background-color: hsla(0, 0%, 8%, 1);
    --tp-monitor-foreground-color: hsla(0, 0%, 48%, 1);
  }
}

